k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: climate-analysis-service
spec:
  selector:
    app: climate-analysis
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: climate-analysis
spec:
  selector:
    matchLabels:
      app: climate-analysis
  replicas: 2
  template:
    metadata:
      labels:
        app: climate-analysis
    spec:
      containers:
        - name: climate-analysis
          image: climate-analysis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: climate-analysis-storage
            mountPath: /var/task/data

      volumes:
        - name: climate-analysis-storage
          persistentVolumeClaim:
            claimName: climate-analysis-pvc
